Add site comemnts

--- a/app/views/home/sms.html.erb
+++ b/app/views/home/sms.html.erb
@@ -1,31 +1,5 @@
 <!-- page header container -->
-<div class="row-fluid">
-  <div class="span12">
-    <div class="page-header">
-
-      <!-- page title -->
-      <h1 class="pull-left">
-        <i class="icon-star"></i>
-        <span>短信营销管理</span>
-      </h1>
-
-      <!-- breadcrumbs -->
-      <div class="pull-right">
-        <ul class="breadcrumb">
-          <li>
-            <a href="/home/index"><i class="icon-bar-chart"></i>
-            </a>
-          </li>
-          <li class="separator">
-            <i class="icon-angle-right"></i>
-          </li>
-          <li class="active">短信营销管理</li>
-        </ul>
-      </div>
-
-    </div>
-  </div>
-</div>
+<%= page_header("短信营销管理", "短信营销管理") %>
 
 <!-- content of page -->
 <div class="row-fluid">
