--- a/app/views/page/documentation.html.erb
+++ b/app/views/page/documentation.html.erb
@@ -28,7 +28,7 @@
         </li>
         <li>
             <a href='#qzone'>
-                QQ邮件发送到Qzone日志
+                QQ通
             </a>
         </li>
         <li>
@@ -337,10 +337,17 @@ status (发送状态：失败、成功； 来自常量)
 <br>
 <section id='qzone'>
     <div class='page-header'>
-        <h1>QQ邮箱发送日志到Qzone</h1>
+        <h1>QQ通</h1>
     </div>
-    <h3>如此这般就可以实现在站内网发布的博客一键邮件到QQ空间了</h3>
+    <h3>QQ通主要功能：<br>
+    1. 绑定一个企业常用QQ，以实现联系方式等调用<br>
+    2. 如果有域名，则开启域名邮箱<br>
+    3. 绑定站内网，通过邮件发送实现在站内网发布的博客一键邮件到QQ空间了<br>
+    4. QQ空间访问，加好友等营销活动（待定）</h3>
     <pre class='prettyprint linenums'>
+
+    申请的新号： 2044185328 inruby.com
+    
 1. 登录QQ邮箱，在‘设置’里面开启smtp服务，否则报错：QQ 454 Authentication failed, please open smtp flag first
 2. from 与 user_name必须一致，否则报错。
 3. QQ客服：http://kf.qq.com/faq/120322fu63YV130422nqIrqu.html
