--- a/app/views/site_comments/edit.html.erb
+++ b/app/views/site_comments/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing site_comment</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @site_comment %> |
-<%= link_to 'Back', site_comments_path %>
+<br><br><br>
+<div class='row-fluid'>
+    <div class='span12 box bordered-box blue-border'>
+        <div class='box-header blue-background'>
+            <div class='title'>
+               <h2> <i class='icon-user-md'></i>
+               编辑留言</h2>
+            </div>
+        </div>
+        <div class='box-content box-double-padding'>
+            <%= render 'form' %>
+            <hr>
+        </div>
+    </div>
+</div>
