--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -80,7 +80,7 @@
     </a>
 </li>
 <li>
-    <a href="#">
+    <a href="/home/blog">
         <i class="icon-external-link"></i>
         <span>博客通</span>
     </a>
@@ -104,7 +104,7 @@
     </a>
 </li>
 <li>
-    <a href="#">
+    <a href="/home/qq">
         <i class="icon-user-md"></i>
         <span>QQ通</span>
     </a>
@@ -125,13 +125,13 @@
     </ul>
 </li>
 <li>
-    <a href="#">
+    <a href="/home/map">
         <i class="icon-map-marker"></i>
         <span>地图通</span>
     </a>
 </li>
 <li>
-    <a href="#">
+    <a href="/home/share">
         <i class="icon-share"></i>
         <span>分享通</span>
     </a>
@@ -146,12 +146,6 @@
     <a href="#">
         <i class="icon-signal"></i>
         <span>移动通</span>
-    </a>
-</li>
-<li>
-    <a href="#">
-        <i class="icon-sign-blank"></i>
-        <span>主题页</span>
     </a>
 </li>
 <li>
