--- a/app/views/layouts/theme.html.erb
+++ b/app/views/layouts/theme.html.erb
@@ -9,8 +9,8 @@
     <meta name="description" content="<%= yield(:meta_description) %>">
 
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
-    <%#= stylesheet_link_tag "application" %>
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+    <link href="<%= @site.theme.css_url%>" rel="stylesheet">
     <%= stylesheet_link_tag "theme" %>
 
     <%= javascript_include_tag "jquery" %>
@@ -21,7 +21,7 @@
   </head>
   <body class="theme">
 
-<div class="navbar navbar-fixed-top">
+<div class="navbar navbar-fixed-top" >
 <div class="container">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
@@ -29,7 +29,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <span class="navbar-brand"><%= link_to "首页", site_path(@site) %></span>
+    <span class="navbar-brand"><%= link_to @site.site_title, site_path(@site) %></span>
   </div>
   <div class="navbar-collapse collapse navbar-responsive-collapse">
     <ul class="nav navbar-nav">
@@ -66,7 +66,7 @@
 
     <%= yield(:header) %>
 
-	<div class="container">
+	<div class="container" style="margin-top: 60px;">
         <div class="row-fluid">
 		  <div class="col-lg-12 main">
 		    <%= render 'layouts/messages' %>
@@ -141,6 +141,13 @@
     <div class="row-fluid">
 		  <div class="col-lg-12">
 				<%= yield(:footer) %>
+<!-- JiaThis Button BEGIN -->
+<script type="text/javascript">
+var jiathis_config = {data_track_clickback:'true'};
+</script>
+<script type="text/javascript" src="http://v3.jiathis.com/code/jiathis_r.js?move=0&amp;uid=1373599011720345" charset="utf-8"></script>
+<!-- JiaThis Button END -->
+
 			</div>
 		</div>
 	</div>
