--- a/app/views/sites/index.html.erb
+++ b/app/views/sites/index.html.erb
@@ -28,51 +28,9 @@
 </div>
 
 <!-- content of page -->
-<div class="row-fluid">
-  <div class="span12 box box-bordered box-nomargin">
-    <div class="box-header red-background">
-        <div class="title">
-            <i class="icon-comments"></i>
-            统计信息
-        </div>
-        <div class="actions">
-            <a href="#" class="btn box-remove btn-mini btn-link"><i class="icon-remove"></i>
-            </a>
-            <a href="#" class="btn box-collapse btn-mini btn-link"><i></i>
-            </a>
-        </div>
-    </div>
-    <div class="row-fluid">
-        <div class="span4">
-            <div class="box-content box-statistic">
-                <h3 class="title text-error"><%= Keystore.value_for("user:#{current_user.id}:phone_items_count") || 0%></h3>
-                <small>号码总数</small>
-                <div class="text-error icon-plus align-right"></div>
-            </div>
-        </div>
-        <div class="span4">
-            <div class="box-content box-statistic">
-                <h3 class="title text-success"><%= Keystore.value_for("user:#{current_user.id}:phone_items_send") || 0%></h3>
-                <small>成功发送</small>
-                <div class="text-success icon-ok align-right"></div>
-            </div>
-        </div>
-        <div class="span4">
-            <div class="box-content box-statistic">
-                <h3 class="title text-info"><%= current_user.phone_items.where(:is_processed => 'n').size%></h3>
-                <small>等待发送</small>
-                <div class="text-info icon-time align-right"></div>
-            </div>
-        </div>
-    </div>
-  </div>
-</div>
-  
-<hr class="hr">
-
 <div class='row-fluid'>
-    <div class='span12 box green-border' >
-        <div class='box-header green-background'>
+    <div class='span12 box red-border' >
+        <div class='box-header red-background'>
             <div class='title'>网站列表</div>
             <div class='actions'>
                 <a href="#" class="btn box-remove btn-mini btn-link"><i class='icon-remove'></i>
@@ -95,6 +53,12 @@
                           <th>
                               模版
                           </th>
+                          <th>
+                              文章数
+                          </th>
+                          <th>
+                              留言数
+                          </th>
                           <th colspan="3">
                               操作
                           </th>
@@ -107,6 +71,8 @@
 												    <td><%= site.site_name %></td>
 												    <td><%= site.site_title %></td>
 												    <td><%= site.theme_id %></td>
+                            <td><%= Keystore.value_for("site:#{site.id}:site_posts_count") || 0 %></td>
+                            <td><%= Keystore.value_for("site:#{site.id}:site_comments_count") || 0 %></td>
 												    <td><%= link_to '查看', site_path(site.site_name), :target => '_blank' %></td>
 												    <td><%= link_to '修改', edit_site_path(site) %></td>
 												    <td><%= link_to '删除', site, method: :delete, data: { confirm: '确定要删除吗？ 此操作不可逆转，请慎重考虑?' } %></td>
@@ -125,7 +91,7 @@
 
 <!--site posts-->
 <div class='row-fluid'>
-  <div class='span12 box'>
+  <div class='span8 box'>
     <div class='box-header'>
         <div class='title'>
         <i class="icon icon-folder-open"></i>
@@ -138,28 +104,66 @@
         </div>
     </div>
     <div class='box-content'>
-        <div class='accordion accordion-green' id='accordion2' style='margin-bottom:0;'>
+        <div class='accordion accordion-green' id='accordion1' style='margin-bottom:0;'>
             <% @site_posts.each_with_index do |item, index| %> 
             <div class='accordion-group'>
                 <div class='accordion-heading'>
-                <a class='accordion-toggle' data-parent='#accordion2' data-toggle='collapse' href='#collapse<%=index%>-accordion2'>
+                <a class='accordion-toggle' data-parent='#accordion1' data-toggle='collapse' href='#collapse<%=index%>-accordion1'>
                     <span class="badge badge-important"><%= item.site.site_name %></span>
                     <span class="badge badge-info"><%= SitePost.cates[item.cate_id] %></span>
                     <%= item.title %>
                   </a>
                 </div>
-                <div class='accordion-body collapse' id='collapse<%=index%>-accordion2'>
+                <div class='accordion-body collapse' id='collapse<%=index%>-accordion1'>
                     <div class='accordion-inner'>
-                       <div class="text-right">
+                       <div class="pull-right">
                        <%= link_to '编辑', edit_site_post_path(item), class: "btn btn-primary" %>
                        <%= link_to '删除', item, class: "btn btn-danger", method: :delete, data: { confirm: 'Are you sure?' } %>
                        </div>
-                       <%= item.content.to_s.gsub(/<[^>]+>/, '').truncate(60) %>
+                       <%= item.content.strip_tags.truncate(60) %>
                     </div>
                 </div>
             </div>
             <% end %>
             <%= will_paginate @site_posts %>
+        </div>
+    </div>
+  </div>
+
+  <div class='span4 box'>
+    <div class='box-header'>
+        <div class='title'>
+        <i class="icon icon-edit"></i>
+        留言管理</div>
+        <div class='actions'>
+            <a href="#" class="btn box-remove btn-mini btn-link"><i class='icon-remove'></i>
+            </a>
+            <a href="#" class="btn box-collapse btn-mini btn-link"><i></i>
+            </a>
+        </div>
+    </div>
+    <div class='box-content'>
+        <div class='accordion accordion-blue' id='accordion2' style='margin-bottom:0;'>
+            <% @site_comments.each_with_index do |item, index| %> 
+            <div class='accordion-group'>
+                <div class='accordion-heading'>
+                <a class='accordion-toggle' data-parent='#accordion2' data-toggle='collapse' href='#collapse<%=index%>-accordion2'>
+                    <span class="badge badge-<%= rand_flag %>"><%= item.name %></span>
+                    <%= item.mobile_phone %>
+                  </a>
+                </div>
+                <div class='accordion-body collapse' id='collapse<%=index%>-accordion2'>
+                    <div class='accordion-inner'>
+                       <div class="pull-right">
+                       <%= link_to '删除', url_for([item.site, item]), class: "btn btn-danger", method: :delete, data: { confirm: '确定要删除吗?' } %>
+                       </div>
+                       <b><%= item.email %></b>|
+                       <%= item.content.strip_tags.truncate(200) %>
+                    </div>
+                </div>
+            </div>
+            <% end %>
+            <%= link_to "查看更多...", site_comments_path, class: 'btn btn-mini' %>
         </div>
     </div>
   </div>
