--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,31 +1,6 @@
 <!-- page header container -->
-<div class="row-fluid">
-  <div class="span12">
-    <div class="page-header">
+<%= page_header("65960网络商务通", "65960") %>
 
-      <!-- page title -->
-      <h1 class="pull-left">
-        <i class="icon-star"></i>
-        <span>Buttons &amp; Icons</span>
-      </h1>
-
-      <!-- breadcrumbs -->
-      <div class="pull-right">
-        <ul class="breadcrumb">
-          <li>
-            <a href="index.html"><i class="icon-bar-chart"></i>
-            </a>
-          </li>
-          <li class="separator">
-            <i class="icon-angle-right"></i>
-          </li>
-          <li class="active">Buttons &amp; Icons</li>
-        </ul>
-      </div>
-
-    </div>
-  </div>
-</div>
 
 <!-- content of page -->
 Flatty v2.0
