--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -4,7 +4,7 @@
   
   <body data-spy='scroll' style='padding-top:60px;padding-bottom:60px' target='.flatty-sidebar'>
     <!--header start-->
-		<div class="navbar navbar-inverse navbar-fixed-top">
+		<div class="navbar navbar-inverse navbar-fixed-top orange-background">
 			<div class="navbar-inner">
 		  <div class="container">
 		      <button class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse" type="button">
